--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ sales_manager:
   email: julius.smith@austintexas.gov
   phone: 5124044214
 catering_manager:
-  name: Dawn Mosley
-  email: dmosely@levyrestaurants.com 
-  phone: 5124044254
+  name: Kerry Craig
+  email: kcraig@levyrestaurants.com
+  phone: 5124044137
 it_coordinator:
   name: Chad Paine
   email: chad.paine@austintexas.gov
